# HashPass

./: .env.example  .gitignore  CLAUDE.md  Claude.md.bak  README.md  main.py  make.md  pyproject.toml  test_executor.py
.claude/: settings.json  settings.json.bak1  settings.local.json
src/: __init__.py
src/api/: admin.py  routes.py
src/core/: admin_auth.py  audit.py  crypto.py  event_loop.py  executor.py  log_config.py  state.py  turnstile.py  useragent.py  webhook.py
src/models/: schemas.py
static/: admin.html  app.js  index.html  style.css  worker.js
static/admin/: app.js
static/admin/css/: admin.css
static/admin/js/: api.js  applogs.js  dashboard.js  logs.js  operations.js  params.js  state.js  websocket.js
static/css/: accessibility.css  animations.css  base.css  components.css  custom.css  layout.css  log-panel.css  responsive.css
static/js/: hashrate.js  logger.js  mining.js  state.js  theme.js  turnstile.js  utils.js  websocket.js
